Wired services up to asp.net core DI container;
accidentally DoS'd netflix roulette with this commit. Need to limit the
max requests to them to something reasonable

--- a/Website/Views/_ViewImports.cshtml
+++ b/Website/Views/_ViewImports.cshtml
@@ -1,2 +1,1 @@
-﻿@using SixDegreesOfNetflix
-@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
