Don't be fancy with trying to run inserts in parallel;
escape single quotes from gremlin queries to prevent exceptions

--- a/Website/Views/Actor/Index.cshtml
+++ b/Website/Views/Actor/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿<h2>Actors</h2>
-<form asp-controller="Actor" asp-action="Degrees" method="post">
+<form asp-controller="Actor" asp-action="Populate" method="post">
     <label>Actor One</label><input name="actorOne" type="text"/>
     <label>Actor Two</label><input name="actorTwo" type="text"/>
     <input type="submit"/>
