--- a/Website/Views/_ViewImports.cshtml
+++ b/Website/Views/_ViewImports.cshtml
@@ -1,1 +1,4 @@
-﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+﻿@using Octogami.SixDegreesOfNetflix.Website.TagHelpers
+
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, Octogami.SixDegreesOfNetflix.Website
