--- a/Website/Views/Actor/DegreesOfSeparation.cshtml
+++ b/Website/Views/Actor/DegreesOfSeparation.cshtml
@@ -1,10 +1,11 @@
 ﻿@model Octogami.SixDegreesOfNetflix.Website.Models.ActorsViewModel
    
 
-<h1>Actors</h1>
-<h2>@Model.ActorOne</h2>
-<h2>@Model.ActorTwo</h2>
-
-<br />
+<h1>Six Degrees of Netflix</h1>
+<h2>Searching for a path between @Model.ActorOne and @Model.ActorTwo ...</h2>
 
 <actor-path actor-path="Model.ActorPath"></actor-path>
+
+<br/>
+
+<h4><a asp-controller="Actor" asp-action="Index">Try again?</a></h4>
