--- a/Website/Views/Shared/_Layout.cshtml
+++ b/Website/Views/Shared/_Layout.cshtml
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - SixDegreesOfNetflix</title>
+    <title>@ViewData["Title"] - Six Degrees of Netflix</title>
 
     <environment names="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
@@ -28,14 +28,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">SixDegreesOfNetflix</a>
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
-                </ul>
+                <a asp-area="" asp-controller="Actor" asp-action="Index" class="navbar-brand">Home</a>
             </div>
         </div>
     </nav>
@@ -43,7 +36,8 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; 2017 - SixDegreesOfNetflix</p>
+            <p>&copy; 2017 - Nelson Wells</p>
+            <p>Powered by <a href="https://netflixroulette.net/">Netflix Roulette</a> and <a href="https://netflixroulette.net/api/">its API</a>.</p>
         </footer>
     </div>
 
