--- a/Website/Views/Shared/_Layout.cshtml
+++ b/Website/Views/Shared/_Layout.cshtml
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - Six Degrees of Netflix</title>
+    <title>@ViewData["Title"] - Six Degrees</title>
 
     <environment names="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
@@ -36,8 +36,9 @@
         @RenderBody()
         <hr />
         <footer>
+            <p><a href="https://www.themoviedb.org"><img src="~/images/tmdb_logo.svg" alt="The Movie Database" style="width: 5%; height: auto;"/></a></p>
+            <p style="font-size: x-small">This product uses the TMDb API but is not endorsed or certified by TMDb.</p>
             <p>&copy; 2017 - Nelson Wells</p>
-            <p>Powered by <a href="https://netflixroulette.net/">Netflix Roulette</a> and <a href="https://netflixroulette.net/api/">its API</a>.</p>
         </footer>
     </div>
 
